Feature/admin module (#10)
* Admin operations for managing parking spots

* Allow lending only user's own spots and prevent borrowing own spots

* Added returning user information for lend and borrow offers

* Endpoint for getting all users and their parking spots

* openapi.yaml update

* Admin service implementation

* Open api fix

* Open api fix v2

* Joining owner table with parking spots
